--- a/editor/package.json
+++ b/editor/package.json
@@ -13,23 +13,35 @@
     "jszip": "^3.1.5",
     "markdown-to-html": "0.0.13",
     "moment": "^2.18.1",
-    "react": "^15.5.4",
+    "react": "^18.2.0",
     "react-bootstrap": "^0.31.5",
     "react-datetime": "^2.10.1",
-    "react-dom": "^15.5.4",
+    "react-dom": "^18.2.0",
     "tar": "^4.4.8"
   },
   "devDependencies": {
-    "babel-jest": "^20.0.3",
+    "babel-jest": "^28.1.3",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "react-popout": "^1.0.1",
-    "react-scripts": "1.0.7"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
