--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # any errors.log should be ignored by the repo
 **/errors.log
+./dict/work
+./cli/tests/ionconfig/nate1-ion
+./cli/tests/ionconfig/with_udp_fail-ion
+./editor/build
