--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
    "seqNum": 14,
    "ionVersion": "4.1.3",
-   "ionConfigVersion": "4.8.2b6",
-   "desc": "IonConfig Release 4.8.2b6"
+   "ionConfigVersion": "4.8.2",
+   "desc": "IonConfig Release 4.8.2"
 }
